dbs/neo4j_graphs/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j-graphs-service
spec:
  selector:
    app: neo4j-graphs
  ports:
    - name: http
      port: 7474
      targetPort: 7474
    - name: https
      port: 7473
      targetPort: 7473
    - name: bolt
      port: 7687
      targetPort: 7687
  type: LoadBalancer
