dbs/neo4j_graphs/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neo4j-graphs-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: neo4j.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neo4j-graphs-service
                port:
                  number: 7474
